--- a/admindashboard/public/index.html
+++ b/admindashboard/public/index.html
@@ -15,6 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <style>
+      * {
+        font-family: "Source Sans Pro", sans-serif;
+        margin: 0;
+      }
+    </style>
     <title>Admin Portal</title>
   </head>
   <body>
